[gd_scene load_steps=5 format=3 uid="uid://cc74dxsatbkir"]

[ext_resource type="Script" path="res://scripts/ability/active/crossbow.gd" id="1_u0c5c"]
[ext_resource type="PackedScene" uid="uid://cfmunyx4yf4tf" path="res://scenes/hero/DiskProjectile.tscn" id="2_oynj6"]
[ext_resource type="Texture2D" uid="uid://q7my0eietu0m" path="res://assets/weapons/aim_line.tres" id="3_pip08"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k4yro"]
radius = 200.0

[node name="CrossBow" type="Node2D"]
script = ExtResource("1_u0c5c")
projectile = ExtResource("2_oynj6")

[node name="LineAsset" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.305882)
position = Vector2(61.25, 0.25)
scale = Vector2(117.5, 3.5)
texture = ExtResource("3_pip08")

[node name="TargetArea" type="Area2D" parent="."]
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetArea"]
shape = SubResource("CircleShape2D_k4yro")

[node name="AutoShootCd" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="ShootCd" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="TargetArea" to="." method="_on_target_area_body_entered"]
[connection signal="body_exited" from="TargetArea" to="." method="_on_target_area_body_exited"]
